--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1834,6 +1834,55 @@ input, select, textarea {
 				width: auto;
 			}
 
+	.caja.producto .imagen .image.kit img{
+		width: 100%;
+		min-height: 280px;
+		height: auto;
+	}
+
+/* Products*/
+
+.caja.producto{
+	display: flex;
+	flex-direction: row;
+}
+
+.caja.producto .imagen{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 30%;
+	height: 100%;
+}
+
+.caja.producto .info{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 70%;
+	height: 100%;
+}
+
+.caja.producto .info .caja-title{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.caja.producto .info .text{
+	display: flex;
+	flex-direction: row;
+	justify-content: justify;
+	align-items: center;
+	width: 100%;
+	overflow: auto;
+}
+
+
 /* List */
 
 	ul {
