--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1809,7 +1809,7 @@ input, select, textarea {
 		.image.featured img{
 			display: block;
 			width: 100%;
-			height: 300px;
+			height: auto;
 			margin: 0 0 4em 0;
 		}
 
