--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1794,10 +1794,11 @@ input, select, textarea {
 		.image.fit {
 			display: block;
 			width: 100%;
+			height: auto;
 		}
 
 		.col-6 .image.fit img{
-			height: 150px;
+			height: auto;
 		}
 
 		.image.featured {
@@ -2917,6 +2918,10 @@ input, select, textarea {
 
 			.image.centered {
 				margin: 0 0 1em 0;
+			}
+
+			.col-6 .image.fit img{
+				height: auto;
 			}
 
 		/* Actions */
