--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2303,15 +2303,29 @@ input, select, textarea {
 		}
 
 /* Header */
-#header video {
-	height: 100vh;
-	width: auto;
-	left: 33vh;
-	top: 0px;
-	z-index: 0;
-	position:absolute;
-	text-align:center;
-}
+	#header video {
+		height: 100vh;
+		width: auto;
+		left: 33vh;
+		top: 0px;
+		z-index: 0;
+		position:absolute;
+		text-align:center;
+	}
+
+	#header img{
+		top: 50%; transform: translateY(-50%);
+		width: 100%;
+		height: 100vh;
+		left:0;
+		vertical-align: center;
+		z-index: 0;
+		position: absolute;
+		opacity: 0.2;
+		-webkit-filter: blur(5px);
+		-webkit-backface-visibility: hidden; 
+		filter: blur(5px);
+	}
 
 	#header {
 		position: relative;
@@ -2804,8 +2818,22 @@ input, select, textarea {
 				font-size: 14pt;
 				line-height: 1.75em;
 			}
+
+			#header img{
+				top: 50%; transform: translateY(-50%);
+				width: 100%;
+				height: auto;
+				left:0;
+				vertical-align: center;
+				z-index: 0;
+				position: absolute;
+				opacity: 0.2;
+				-webkit-filter: blur(5px);
+				-webkit-backface-visibility: hidden; 
+				filter: blur(5px);
+			}
+
 			#header video {
-	
 				top: 50%; transform: translateY(-50%);
 				width: 100%;
 				height: auto;
@@ -2945,6 +2973,20 @@ input, select, textarea {
 			vertical-align: center;
 			z-index: 0;
 			position:absolute;
+		}
+
+		#header img{
+			top: 50%; transform: translateY(-50%);
+			width: 100%;
+			height: auto;
+			left:0;
+			vertical-align: center;
+			z-index: 0;
+			position: absolute;
+			opacity: 0.2;
+			-webkit-filter: blur(5px);
+			-webkit-backface-visibility: hidden; 
+			filter: blur(5px);
 		}
 
 
