--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2315,7 +2315,7 @@ input, select, textarea {
 	#header img{
 		top: 50%; transform: translateY(-50%);
 		width: 100%;
-		height: 100vh;
+		height: 250px;
 		left:0;
 		vertical-align: center;
 		z-index: 0;
@@ -2822,7 +2822,7 @@ input, select, textarea {
 			#header img{
 				top: 50%; transform: translateY(-50%);
 				width: 100%;
-				height: auto;
+				height: 250px;
 				left:0;
 				vertical-align: center;
 				z-index: 0;
@@ -2978,7 +2978,7 @@ input, select, textarea {
 		#header img{
 			top: 50%; transform: translateY(-50%);
 			width: 100%;
-			height: auto;
+			height: 250px;
 			left:0;
 			vertical-align: center;
 			z-index: 0;
