--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2814,13 +2814,18 @@ input, select, textarea {
 				opacity: 0;
 			}
 
-			.carousel article .image {
+			.carousel article .image.featured {
 				position: relative;
 				left: -1em;
 				top: 0;
 				width: auto;
 				margin-right: -2em;
 				margin-bottom: 3em;
+			}
+
+			.carousel article .image.featured img{
+				min-width: auto;
+				max-height: 250px;
 			}
 
 			.carousel article p {
@@ -2970,6 +2975,20 @@ input, select, textarea {
 				.carousel article {
 					width: 18em;
 					margin: 0 1em 0 0;
+				}
+
+				.carousel article .image.featured {
+					position: relative;
+					left: -1em;
+					top: 0;
+					width: auto;
+					margin-right: -2em;
+					margin-bottom: 3em;
+				}
+	
+				.carousel article .image.featured img{
+					min-width: auto;
+					max-height: 234px;
 				}
 
 	}
@@ -3403,6 +3422,21 @@ input, select, textarea {
 
 					.carousel article .image {
 						margin-bottom: 2em;
+					}
+
+
+					.carousel article .image.featured {
+						position: relative;
+						left: -1em;
+						top: 0;
+						width: auto;
+						margin-right: -2em;
+						margin-bottom: 3em;
+					}
+		
+					.carousel article .image.featured img{
+						min-width: auto;
+						max-height: 175px;
 					}
 
 	}
