--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1859,6 +1859,9 @@ input, select, textarea {
 	display: flex;
 	flex-direction: row;
 	margin:10%;
+	border-bottom: 10px;
+	border-bottom: 8px solid grey;
+
 }
 
 .caja.producto .imagen{
@@ -1866,32 +1869,31 @@ input, select, textarea {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	width: 30%;
-	height: 100%;
+	width: 40%;
 }
+
 
 .caja.producto .info{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	width: 70%;
+	width: 60%;
 	height: 100%;
 }
 
 .caja.producto .info .caja-title{
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	margin-left: 12%;
+	padding-left: 1em;
 	width: 100%;
 	height: 100%;
 }
 
 .caja.producto .info .text{
-	display: flex;
-	flex-direction: row;
-	justify-content: justify;
-	align-items: center;
+	display: inline-block;
 	width: 100%;
 }
 
